# SDL-Jni

./: .gitignore  .gitmodules  .project  LICENSE  README.md  local.properties  settings.gradle
app/: .classpath  build.gradle
app/jni/: CMakeLists.txt  android_jni.cpp  android_jni.hpp  main.cpp
app/src/main/: AndroidManifest.xml
app/src/main/java/org/libsdl/app/: SDLActivity.java
